# boba

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEFICIENCIES.md  README.md
.github/workflows/: ci.yml
crates/boba/: Cargo.toml
crates/boba-core/: Cargo.toml
crates/boba-core/src/: command.rs  component.rs  event.rs  input_history.rs  input_layer.rs  key_sequence.rs  lib.rs  model.rs  post_render.rs  quit.rs  runtime.rs  subscription.rs  testing.rs
crates/boba-core/src/subscriptions/: mod.rs  terminal.rs  timer.rs
crates/boba-widgets/: Cargo.toml
crates/boba-widgets/src/: autocomplete.rs  chat.rs  chrome.rs  code_block.rs  cursor.rs  dropdown.rs  filepicker.rs  focus.rs  help.rs  junctions.rs  key.rs  lib.rs  list.rs  markdown.rs  modal.rs  overlay.rs  paginator.rs  progress.rs  runeutil.rs  search.rs  select.rs  selection.rs  spinner.rs  status_bar.rs  stopwatch.rs  table.rs  tabs.rs  text_area.rs  text_edit.rs  text_input.rs  timer.rs  viewport.rs  wizard.rs
crates/boba/src/: lib.rs
docs/plans/: 2026-02-19-widget-composability-design.md  2026-02-19-widget-composability-plan.md  2026-03-12-textarea-unification-design.md  2026-03-12-textarea-unification-plan.md  2026-03-13-widget-improvements-plan.md
examples/: async_http.rs  autocomplete.rs  chat.rs  counter.rs  file_browser.rs  full_app.rs  input_form.rs  wizard.rs
