[package]
name = "boba-widgets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Widget library for boba — reusable TUI components"

[dependencies]
boba-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
