[package]
name = "boba-widgets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Widget library for boba — reusable TUI components"

[dependencies]
boba-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
syntect = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }

[features]
default = []
syntax-highlighting = ["dep:syntect"]
markdown = ["dep:pulldown-cmark", "syntax-highlighting"]
